@@ -9,6 +9,8 @@
  - Updated translations (am, lt).
  - Save serverlist before connecting (Joe Drew).
  - OpenBSD compile fixes.
+ - (Encoding) Fallback outgoing text to "?" for unconvertable chars.
+ - 
  - 
  - 
 
